--- a/src/main/resources/templates/evento/eventoFragment.html
+++ b/src/main/resources/templates/evento/eventoFragment.html
@@ -47,22 +47,26 @@
 						<!-- label necessaria per formattazione in ogni caso, vuota se NON editabile -->
 						<label class="control-label col-xs-1 text-right" th:text="${counter != null} ? ${++counter} : ''">1</label>
 						<label class="control-label col-md-3 col-sm-3 col-xs-11" for="procedure_formative_radio">
-							<span th:text="#{label.procedure_formative}">Procedure formative</span>
+							<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.procedure_formative}">Procedure formative</span>
 							<span th:if="${editabile}" class="required">*</span>
 						</label>
-						<div class="col-md-4 col-sm-4 col-xs-12" id="procedure_formative_radio">
-							<div class="radio" th:with="counter=${(editabile == true) ? (++counter) : null}"
-								th:each="proceduraFormativa, row : ${proceduraFormativaList}">
-								<label th:class="${(!editabile or !#lists.contains(eventoWrapper.idEditabili, counter)) ? 'label-disabled' : ''}">
-									<!-- input disabilitato se l'evento è NON editabile perchè eventoShow o se l'id NON  è editabile -->
+						<th:block th:with="counter=${counter}" th:if="${editabile}">
+							<div class="col-md-4 col-sm-4 col-xs-12" id="procedure_formative_radio">
+								<div class="radio" th:with="counter=${(editabile == true) ? (++counter) : null}"
+									th:each="proceduraFormativa, row : ${proceduraFormativaList}">
 									<input type="radio" class="flat"
 										th:field="${eventoWrapper.evento.proceduraFormativa}"
 										th:value="${proceduraFormativa}"
-										th:disabled="${!editabile or !#lists.contains(eventoWrapper.idEditabili, counter)}" />
+										th:disabled="${!#lists.contains(eventoWrapper.idEditabili, counter)}" />
 									<span th:text="${proceduraFormativa.nome}">proceduraFormativa.nome</span>
-								</label>
+								</div>
 							</div>
-						</div>
+						</th:block>
+						<th:block th:unless="${editabile}">
+							<div class="col-md-4 col-sm-4 col-xs-12" id="procedure_formative_radio">
+									<div class="value" th:text="${eventoWrapper.evento.proceduraFormativa.nome}"></div>
+							</div>
+						</th:block>
 						<div th:if="${#fields.hasErrors('eventoWrapper.evento.proceduraFormativa')}" class="alert" th:errors="${eventoWrapper.evento.proceduraFormativa}"></div>
 					</div>
 
@@ -73,20 +77,23 @@
 						<!-- label necessaria per formattazione in ogni caso, vuota se NON editabile -->
 						<label class="control-label col-xs-1 text-right" th:text="${counter != null} ? ${++counter} : ''">2</label>
 						<label class="control-label col-md-3 col-sm-3 col-xs-11" for="procedure_formative_titolo">
-							<span th:text="#{label.titolo_programma_formativo}">Titolo del programma formativo</span>
+							<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.titolo_programma_formativo}">Titolo del programma formativo</span>
 							<span th:if="${editabile}" class="required">*</span>
 						</label>
-						<div class="col-md-4 col-sm-4 col-xs-12" id="procedure_formative_titolo">
-							<!-- input disabilitato se l'evento è NON editabile perchè eventoShow o se l'id NON  è editabile -->
-							<textarea maxlength="3000" id="title" rows="3" name="titolo"
-								style="resize: none;" th:field="${eventoWrapper.evento.titolo}"
-								th:if="${editabile}"
-								th:disabled="${!#lists.contains(eventoWrapper.idEditabili, counter)}">
-							</textarea>
-							<div class="value" th:if="${!editabile}" th:text="${eventoWrapper.evento.titolo}"></div>
-							<!-- JS di counter non è disponibile in eventoShow -->
-							<div th:if="${editabile}" id="counter"></div>
-						</div>
+						<th:block th:with="counter=${counter}" th:if="${editabile}">
+							<div class="col-md-4 col-sm-4 col-xs-12" id="procedure_formative_titolo">
+								<textarea maxlength="3000" id="title" rows="3" name="titolo"
+									style="resize: none;" th:field="${eventoWrapper.evento.titolo}"
+									th:disabled="${!#lists.contains(eventoWrapper.idEditabili, counter)}">
+								</textarea>
+								<div id="counter"></div>
+							</div>
+						</th:block>
+						<th:block th:unless="${editabile}">
+							<div class="col-md-4 col-sm-4 col-xs-12" id="procedure_formative_titolo">
+								<div class="value" th:text="${eventoWrapper.evento.titolo}"></div>
+							</div>
+						</th:block>
 						<div th:if="${#fields.hasErrors('eventoWrapper.evento.titolo')}" class="alert" th:errors="${eventoWrapper.evento.titolo}"></div>
 					</div>
 
@@ -97,35 +104,40 @@
 						<!-- label necessaria per formattazione in ogni caso, vuota se NON editabile -->
 						<label class="control-label col-xs-1 text-right" th:text="${counter != null} ? ${++counter} : ''">3</label>
 						<label class="control-label col-md-3 col-sm-3 col-xs-11" for="obiettivo_formativo_nazionale">
-							<span th:text="#{label.obiettivo_formativo_nazionale}">Obiettivo Nazionale</span>
+							<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.obiettivo_formativo_nazionale}">Obiettivo Nazionale</span>
 							<span th:if="${editabile}" class="required">*</span>
 						</label>
-						<div class="col-md-4 col-sm-4 col-xs-12" id="obiettivo_formativo_nazionale">
-							<!-- input disabilitato se l'evento è NON editabile perchè eventoShow o se l'id NON  è editabile -->
-							<select id="obiettivo-formativo-nazionale-select"
-								class="selectpicker"
-								th:field="${eventoWrapper.evento.obiettivoNazionale}"
-								data-width="100%" data-style="btn-primary"
-								data-actions-box="true" data-size="10"
-								data-hide-disabled="false"
-								title="Seleziona un obiettivo..."
-								th:disabled="${!#lists.contains(eventoWrapper.idEditabili, counter)}"
-								th:if="${editabile}"
-								th:remove="all-but-first">
-								<optgroup class="optgroup-primary"
-									th:each="categoriaObiettivoNazionale, row: ${categoriaObiettivoNazionaleList}"
-									th:label="${categoriaObiettivoNazionale.nome}"
+						<th:block th:with="counter=${counter}" th:if="${editabile}">
+							<div class="col-md-4 col-sm-4 col-xs-12" id="obiettivo_formativo_nazionale">
+								<!-- input disabilitato se l'evento è NON editabile perchè eventoShow o se l'id NON  è editabile -->
+								<select id="obiettivo-formativo-nazionale-select"
+									class="selectpicker"
+									th:field="${eventoWrapper.evento.obiettivoNazionale}"
+									data-width="100%" data-style="btn-primary"
+									data-actions-box="true" data-size="10"
+									data-hide-disabled="false"
+									title="Seleziona un obiettivo..."
+									th:disabled="${!#lists.contains(eventoWrapper.idEditabili, counter)}"
 									th:remove="all-but-first">
-									<option
-										th:each="obiettivoNazionale, row: ${obiettivoNazionaleList}"
-										th:if="${obiettivoNazionale.categoria == categoriaObiettivoNazionale}"
-										th:value="${obiettivoNazionale.id}"
-										th:text="${obiettivoNazionale.nome}">Obiettivo selezionato
-									</option>
-								</optgroup>
-							</select>
-							<div class="value" th:if="${!editabile}" th:text="${eventoWrapper.evento.obiettivoNazionale.nome}"></div>
-						</div>
+									<optgroup class="optgroup-primary"
+										th:each="categoriaObiettivoNazionale, row: ${categoriaObiettivoNazionaleList}"
+										th:label="${categoriaObiettivoNazionale.nome}"
+										th:remove="all-but-first">
+										<option
+											th:each="obiettivoNazionale, row: ${obiettivoNazionaleList}"
+											th:if="${obiettivoNazionale.categoria == categoriaObiettivoNazionale}"
+											th:value="${obiettivoNazionale.id}"
+											th:text="${obiettivoNazionale.nome}">Obiettivo selezionato
+										</option>
+									</optgroup>
+								</select>
+							</div>
+						</th:block>
+						<th:block th:unless="${editabile}">
+							<div class="col-md-4 col-sm-4 col-xs-12" id="obiettivo_formativo_nazionale">
+								<div class="value" th:text="${eventoWrapper.evento.obiettivoNazionale.nome}"></div>
+							</div>
+						</th:block>
 						<div th:if="${#fields.hasErrors('eventoWrapper.evento.obiettivoNazionale')}" class="alert" th:errors="${eventoWrapper.evento.obiettivoNazionale}"></div>
 					</div>
 
@@ -136,29 +148,34 @@
 						<!-- label necessaria per formattazione in ogni caso, vuota se NON editabile -->
 						<label class="control-label col-xs-1 text-right" th:text="${counter != null} ? ${++counter} : ''">4</label>
 						<label class="control-label col-md-3 col-sm-3 col-xs-11" for="obiettivo_formativo_regionale">
-							<span th:text="#{label.obiettivo_formativo_regionale}">Obiettivo Nazionale</span>
+							<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.obiettivo_formativo_regionale}">Obiettivo Nazionale</span>
 							<span th:if="${editabile}" class="required">*</span>
 						</label>
-						<div class="col-md-4 col-sm-4 col-xs-12" id="obiettivo_formativo_regionale">
-							<!-- input disabilitato se l'evento è NON editabile perchè eventoShow o se l'id NON  è editabile -->
-							<select id="obiettivo-formativo-regionale-select"
-								class="selectpicker"
-								th:field="${eventoWrapper.evento.obiettivoRegionale}"
-								data-width="100%" data-style="btn-primary"
-								data-actions-box="true" data-size="10"
-								data-hide-disabled="false"
-								title="Seleziona un obiettivo..."
-								th:if="${editabile}"
-								th:disabled="${!#lists.contains(eventoWrapper.idEditabili, counter)}"
-								th:remove="all-but-first">
-								<option
-									th:each="obiettivoRegionale, row: ${obiettivoRegionaleList}"
-									th:value="${obiettivoRegionale.id}"
-									th:text="${obiettivoRegionale.nome}">Obiettivo selezionato
-								</option>
-							</select>
-							<div class="value" th:if="${!editabile}" th:text="${eventoWrapper.evento.obiettivoRegionale.nome}"></div>
-						</div>
+						<th:block th:with="counter=${counter}" th:if="${editabile}">
+							<div class="col-md-4 col-sm-4 col-xs-12" id="obiettivo_formativo_regionale">
+								<!-- input disabilitato se l'evento è NON editabile perchè eventoShow o se l'id NON  è editabile -->
+								<select id="obiettivo-formativo-regionale-select"
+									class="selectpicker"
+									th:field="${eventoWrapper.evento.obiettivoRegionale}"
+									data-width="100%" data-style="btn-primary"
+									data-actions-box="true" data-size="10"
+									data-hide-disabled="false"
+									title="Seleziona un obiettivo..."
+									th:disabled="${!#lists.contains(eventoWrapper.idEditabili, counter)}"
+									th:remove="all-but-first">
+									<option
+										th:each="obiettivoRegionale, row: ${obiettivoRegionaleList}"
+										th:value="${obiettivoRegionale.id}"
+										th:text="${obiettivoRegionale.nome}">Obiettivo selezionato
+									</option>
+								</select>
+							</div>
+						</th:block>
+						<th:block th:unless="${editabile}">
+							<div class="col-md-4 col-sm-4 col-xs-12" id="obiettivo_formativo_regionale">
+								<div class="value" th:text="${eventoWrapper.evento.obiettivoRegionale.nome}"></div>
+							</div>
+						</th:block>
 						<div th:if="${#fields.hasErrors('eventoWrapper.evento.obiettivoRegionale')}" class="alert" th:errors="${eventoWrapper.evento.obiettivoRegionale}"></div>
 					</div>
 
@@ -169,31 +186,34 @@
 						<!-- label necessaria per formattazione in ogni caso, vuota se NON editabile -->
 						<label class="control-label col-xs-1 text-right" th:text="${counter != null} ? ${++counter} : ''">5</label>
 						<label class="control-label col-md-3 col-sm-3 col-xs-11" for="evento_professioni">
-							<span th:text="#{label.evento_professioni}">Evento per professioni</span>
+							<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.evento_professioni}">Evento per professioni</span>
 							<span th:if="${editabile}" class="required">*</span>
 						</label>
+						<th:block th:with="counter=${counter}" th:if="${editabile}">
 							<div class="col-md-4 col-sm-4 col-xs-12" id="evento_professioni">
 								<div class="radio">
-									<label th:class="${(!editabile or !#lists.contains(eventoWrapper.idEditabili, counter)) ? 'label-disabled' : ''}">
-										<input type="radio" class="flat"
-											id="generaleProf" name="professioneEvento"
-											th:field="${eventoWrapper.evento.professioniEvento}"
-											th:value="Generale"
-											th:disabled="${!editabile or !#lists.contains(eventoWrapper.idEditabili, counter)}" />
-										<span th:text="#{label.generale}">Generale </span>
-									</label>
+									<input type="radio" class="flat"
+										id="generaleProf" name="professioneEvento"
+										th:field="${eventoWrapper.evento.professioniEvento}"
+										th:value="Generale"
+										th:disabled="${!#lists.contains(eventoWrapper.idEditabili, counter)}" />
+									<span th:text="#{label.generale}">Generale </span>
 								</div>
 								<div class="radio">
-									<label th:class="${(!editabile or !#lists.contains(eventoWrapper.idEditabili, counter)) ? 'label-disabled' : ''}">
-										<input type="radio" class="flat"
-											id="settorialeProf" name="professioneEvento"
-											th:field="${eventoWrapper.evento.professioniEvento}"
-											th:value="Settoriale"
-											th:disabled="${!editabile or !#lists.contains(eventoWrapper.idEditabili, counter)}" />
-										<span th:text="#{label.settoriale}">Settoriale </span>
-									</label>
+									<input type="radio" class="flat"
+										id="settorialeProf" name="professioneEvento"
+										th:field="${eventoWrapper.evento.professioniEvento}"
+										th:value="Settoriale"
+										th:disabled="${!#lists.contains(eventoWrapper.idEditabili, counter)}" />
+									<span th:text="#{label.settoriale}">Settoriale </span>
 								</div>
 							</div>
+						</th:block>
+						<th:block th:unless="${editabile}">
+							<div class="col-md-4 col-sm-4 col-xs-12" id="evento_professioni">
+								<div class="value" th:text="${eventoWrapper.evento.professioniEvento}"></div>
+							</div>
+						</th:block>
 						<div th:if="${#fields.hasErrors('eventoWrapper.evento.professioniEvento')}" class="alert" th:errors="${eventoWrapper.evento.professioniEvento}"></div>
 					</div>
 
@@ -204,10 +224,10 @@
 						<!-- label necessaria per formattazione in ogni caso, vuota se NON editabile -->
 						<label class="control-label col-xs-1 text-right" th:text="${counter != null} ? ${++counter} : ''">6</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="evento_professioni-select">
-								<span th:text="#{label.professioni_discipline}">Professioni/discipline</span>
+								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.professioni_discipline}">Professioni/discipline</span>
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
-						<th:block th:if="${editabile and #lists.contains(eventoWrapper.idEditabili, counter)}">
+						<th:block th:with="counter=${counter}" th:if="${editabile}">
 							<div class="col-md-4 col-sm-4 col-xs-12" id="evento_professioni-select">
 								<div class="col-xs-12 select-with-margin-container">
 									<select id="professioni" class="selectpicker multi"
@@ -215,6 +235,7 @@
 										data-style="btn-primary" data-actions-box="true"
 										data-size="10" title="Seleziona una professione..."
 										onchange="abilitaDiscipline(this)"
+										th:disabled="${!#lists.contains(eventoWrapper.idEditabili, counter)}"
 										data-selected-text-format="count" th:remove="all-but-first">
 										<option th:each="professione, row: ${professioneList}"
 											th:value="${professione.id}" th:text="${professione.nome}"
@@ -226,6 +247,7 @@
 									th:field="${eventoWrapper.evento.discipline}"
 									multiple="multiple" data-width="100%"
 									data-style="btn-success" data-actions-box="true"
+									th:disabled="${!#lists.contains(eventoWrapper.idEditabili, counter)}"
 									data-size="10" data-hide-disabled="true"
 									title="Seleziona una disciplina..." disabled="disabled"
 									data-selected-text-format="count" th:remove="all-but-first">
@@ -240,12 +262,12 @@
 								</select>
 							</div>
 						</th:block>
-						<th:block th:unless="${editabile and #lists.contains(eventoWrapper.idEditabili, counter)}">
+						<th:block th:unless="${editabile}">
 							<div class="row" style="clear: both; padding: 2px;"></div>
 							<div class="row" style="clear: both">
 								<div class="col-md-3 col-sm-3 col-xs-12"></div>
 								<div class="col-md-6 col-sm-6 col-xs-12" id="evento_professioni-select">
-									<table id="professioni-discipline" class="table table-striped table-bordered dt-responsive nowrap datatable-responsive-form" cellspacing="0" width="100%">
+									<table id="professioni-discipline" class="table table-striped table-bordered dt-responsive nowrap datatable-responsive-discipline" cellspacing="0" width="100%">
 										<thead>
 											<tr>
 												<th th:text="#{label.professione}">Professione</th>
