--- a/src/main/resources/templates/accreditamento/datiAccreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoShow.html
@@ -21,6 +21,41 @@
 
 				</div>
 			</div>
+			<script th:inline="javascript">
+			/*<![CDATA[*/
+				$(document).ready(function() {
+
+					//table responsive professioni/discipline show
+					$('.datatable-responsive-discipline').DataTable({
+						"bFilter" : false,
+						"bPaginate": false,
+						"bInfo" : false,
+					    "columnDefs": [
+					    	{ "targets": [ '_all' ], "orderable": false },
+					    	{ "targets": [ 0 ], "orderData": [ 0, 1 ] },
+					    	{ "visible": false, "targets": 0 }
+					    ],
+					    "order": [[ 0, 'asc' ], [ 1, 'asc' ]],
+					    "drawCallback": function ( settings ) {
+				        	var api = this.api();
+				            var rows = api.rows( {page:'current'} ).nodes();
+				            var last=null;
+
+				            api.column(0, {page:'current'} ).data().each( function ( group, i ) {
+				            	if ( last !== group ) {
+				                	$(rows).eq( i ).before(
+				                    	'<tr class="row-group"><td colspan="2">'+group+'</td></tr>'
+				            	);
+				                    last = group;
+				                }
+				            });
+				        }
+
+					});
+
+				})
+			/*]]>*/
+			</script>
 		</div>
 	</div>
 </body>
