--- a/src/main/resources/templates/fragments/allegati.html
+++ b/src/main/resources/templates/fragments/allegati.html
@@ -16,17 +16,18 @@
 
 			<label class="control-label col-xs-1" th:text="${counter}">numero indice</label>
 			<label class="control-label col-md-3 col-sm-3 col-xs-7" th:for="__${tipoAllegato}__">
-				<span th:text="#{label.__${tipoAllegato}__}">tipo allegato</span><span th:if="${note == null}" class="required">*</span>
+				<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.__${tipoAllegato}__}">tipo allegato</span>
+				<span th:if="${note == null and editabile}" class="required">*</span>
 				<span class="small" style="display: block;" th:unless="${note == null}" th:text="${note}">messaggio aggiuntivo</span>
 			</label>
-			<th:block th:if="${counter != null and #lists.contains(__${wrapper}__.idEditabili, counter)}">
+			<th:block th:if="${editabile}">
 				<div class="col-md-4 col-sm-4 col-xs-12">
-					<div class="form-control col-md-7 col-xs-12 btn">
+					<div class="col-xs-12">
 						<input type="file" onchange="submitFile(this)" th:id="__${tipoAllegato}__" th:name="__${tipoAllegato}___multipart" required="required"
-							style="display: none;" />
-						<input type="button" class="pull-left allegato-btn" th:value="#{label.scegli_file}" th:onclick="|setAllegato('#__${tipoAllegato}__');|" />
-						<div class="allegato-label"><a th:id="__${tipoAllegato}___label" th:unless="${__${wrapper}__.__${tipoAllegato}__.new}" th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div>
-						<div class="allegato-label"><a th:id="__${tipoAllegato}___label" th:if="${__${wrapper}__.__${tipoAllegato}__.new}" th:text="#{label.nessun_file_selezionato}" class="allegato-label"></a></div>
+							style="display: none;" th:disabled="${counter == null or !#lists.contains(__${wrapper}__.idEditabili, counter)}"/>
+						<input type="button" class="pull-left allegato-btn btn btn-success" th:value="#{label.scegli_file}" th:onclick="|setAllegato('#__${tipoAllegato}__');|" th:disabled="${counter == null or !#lists.contains(__${wrapper}__.idEditabili, counter)}" />
+						<div th:unless="${__${wrapper}__.__${tipoAllegato}__.new}" class="allegato-label"><a th:id="__${tipoAllegato}___label" th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div>
+						<div th:if="${__${wrapper}__.__${tipoAllegato}__.new}" class="allegato-label"><a th:id="__${tipoAllegato}___label" th:text="#{label.nessun_file_selezionato}"></a></div>
 					</div>
 				</div>
 				<!-- pulsante per aggiungere firma -->
@@ -34,12 +35,10 @@
 					<button type="button" onclick="alert('alert temporaneo, questo onclick verrà sostituito dal service per la firma digitale!')" class="btn btn-primary firma" th:title="#{label.firma_digitalmente}"><span class="fa fa-pencil"></span></button>
 				</th:block>
 			</th:block>
-			<th:block th:if="${counter == null or (!#lists.contains(__${wrapper}__.idEditabili, counter))}">
+			<th:block th:unless="${editabile}">
 				<div class="col-md-4 col-sm-4 col-xs-12">
-					<div th:unless="${__${wrapper}__.__${tipoAllegato}__.new}" class="allegato-label"><a th:id="__${tipoAllegato}___disabled" class="form-control form-disabled-text clickable left-align col-md-7 col-xs-12"
-						th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div>
-					<div th:if="${__${wrapper}__.__${tipoAllegato}__.new}" class="allegato-label"><span th:id="__${tipoAllegato}___disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
-						th:text="#{label.allegato_non_inserito}"></span></div>
+					<div class="" th:unless="${__${wrapper}__.__${tipoAllegato}__.new}"><div class="value"><span class="fa fa-download"> </span> <a th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div></div>
+					<div class="" th:if="${__${wrapper}__.__${tipoAllegato}__.new}"><div class="value danger" th:text="#{label.allegato_non_inserito}"></div></div>
 				</div>
 			</th:block>
 			<div th:if="${#fields.hasErrors('__${wrapper}__.__${tipoAllegato}__')}" class="alert" th:errors="${__${wrapper}__.__${tipoAllegato}__}"></div>
@@ -60,9 +59,9 @@
 				<div class="form-control col-md-7 col-xs-12 btn">
 					<input type="file" onchange="submitFile(this)" th:id="__${tipoAllegato}__" th:name="__${tipoAllegato}___multipart" required="required"
 						style="display: none;" />
-					<input type="button" class="pull-left allegato-btn" th:value="#{label.scegli_file}" th:onclick="|setAllegato('#__${tipoAllegato}__');|" />
-					<div class="allegato-label"><a th:id="__${tipoAllegato}___label" th:unless="${__${wrapper}__.__${tipoAllegato}__.new}" th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div>
-					<div class="allegato-label"><a th:id="__${tipoAllegato}___label" th:if="${__${wrapper}__.__${tipoAllegato}__.new}" th:text="#{label.nessun_file_selezionato}" class="allegato-label"></a></div>
+					<input type="button" class="pull-left allegato-btn btn btn-success" th:value="#{label.scegli_file}" th:onclick="|setAllegato('#__${tipoAllegato}__');|" />
+					<div th:unless="${__${wrapper}__.__${tipoAllegato}__.new}" class="allegato-label"><a th:id="__${tipoAllegato}___label" th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div>
+					<div th:if="${__${wrapper}__.__${tipoAllegato}__.new}" class="allegato-label"><a th:id="__${tipoAllegato}___label" th:text="#{label.nessun_file_selezionato}"></a></div>
 				</div>
 			</div>
 			<!-- pulsante per aggiungere firma -->
